# screener_mos

./: .gitignore  .template.env  ReadMe.md  app.py  config.json  docker-compose.dev.gui.yml  docker-compose.gui.yml  docker-compose.yml  guiapp.py  requirements.txt  upload.py
Addition/screener-main/: LICENSE  README.md  pyproject.toml  requirements.txt
Addition/screener-main/configs/: prepare_mood_abdomen.yaml  prepare_mood_brain.yaml  train_dense_vicreg_on_ctrate.yaml  train_dense_vicreg_on_mood_abdomen.yaml  train_dense_vicreg_on_mood_brain.yaml  train_glow_on_ctrate.yaml  train_glow_on_mood_abdomen.yaml
Addition/screener-main/configs/hydra/: default.yaml
Addition/screener-main/configs/paths/: default.yaml
Addition/screener-main/scripts/: download_mood_abdomen.py  download_mood_brain.py  prepare_mood_abdomen.py  prepare_mood_brain.py  test_glow_on_CTRate.py  train_dense_vicreg_on_CTRate.py  train_dense_vicreg_on_mood_abdomen.py  train_dense_vicreg_on_mood_brain.py  train_glow_on_CTRate.py  train_glow_on_mood_abdomen.py
Addition/screener-main/src/screener/: condition_model.py  data_prefetcher.py  descriptor_model.py  utils.py
Addition/screener-main/src/screener/datasets/: CTRate.py  mood_abdomen.py  mood_brain.py
Addition/screener-main/src/screener/lightning_datamodules/: anomaly_segm.py  dense_ssl.py
Addition/screener-main/src/screener/lightning_modules/: anomaly_segm.py  dense_vicreg.py  glow.py
AiriApp/: AiriFMApp.py  Dockerfile  Dockerfile.dev  ProccessStudyClass.py  ScreenerModel.py  StudiesClass.py  StudyLoader.py  __init__.py
Data/: .gitignore
(+26 files in other folders)
